--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "@heroicons/react": "^2.1.5"
+        "@heroicons/react": "^2.1.5",
+        "react-flag-kit": "^1.1.1"
     }
 }
